--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 5.0
+-----------
+|- re-route power part and current amps
+|- add external off connector to switch of VCC
 
 Version 4.0
 -----------
